# mpltoolbox

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  advanced.html  demo.html  ellipses.html  environment.yml  genindex.html  index.html  lines.html  objects.inv  output.txt  points.html  polygons.html  pyproject.toml  rectangles.html  search.html  searchindex.js  setup.cfg  spans.html  tox.ini
.github/workflows/: ci.yml  docs.yml  nightly_at_main_lower_bound.yml
_modules/: functools.html  index.html
_modules/mpltoolbox/: tool.html
_sources/: advanced.ipynb  demo.ipynb  ellipses.ipynb  points.ipynb  rectangles.ipynb
_sources/about/: index.md
_static/: documentation_options.js
about/: index.html
api-reference/: index.html
conda/: meta.yaml
developer/: coding-conventions.html  dependency-management.html  getting-started.html  index.html
docs/: advanced.ipynb  api.rst  callbacks.ipynb  conf.py  demo.ipynb  ellipses.ipynb  ellipses.rst  event.py  index.md  index.rst  lines.ipynb  lines.rst  points.ipynb  points.rst  polygons.ipynb  programmatic-control.ipynb  rectangles.ipynb  rectangles.rst  requirements.txt  spans.ipynb
requirements/: base.in  base.txt  basetest.in  basetest.txt  ci.txt  dev.txt  docs.in  docs.txt  make_base.py  mypy.txt  nightly.in  nightly.txt  static.txt  wheels.txt
tests/: conftest.py  ellipses_test.py  hspans_test.py  line_test.py  lines_test.py  package_test.py  points_test.py  polygons_test.py  rectangles_test.py  vspans_test.py
(+29 files in other folders)
