[metadata]
name = mpltoolbox
author = Neil Vaytet
author_email = neil.vaytet@esss.se
description = Interactive tools for matplotlib
license = BSD
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scipp/mpltoolbox
project_urls =
    Bug Tracker = https://github.com/scipp/mpltoolbox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib
    numpy

[options.packages.find]
where = src

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203
